# halogen

./: .gitignore  Cargo.toml  README.MD
halogen-core/: Cargo.toml
halogen-core/src/: color.rs  event.rs  lib.rs  paint.rs  signal.rs  theme.rs  tree.rs  widget.rs
halogen-core/src/geometry/: axes.rs  corners.rs  edges.rs  grid_frac_units.rs  measure.rs  measurements.rs  mod.rs  percentage.rs  pixels.rs  point.rs  rect.rs  scale_units.rs
halogen-core/src/style/: display.rs  mod.rs
halogen-example/: Cargo.toml
halogen-example/src/: main.rs
halogen-render/: Cargo.toml
halogen-render/src/: executor.rs  lib.rs
halogen-render/src/backend/: mod.rs  tiny_skia.rs
phosphor/: Cargo.toml
phosphor-core/: Cargo.toml
phosphor-core/src/: color.rs  event.rs  handler.rs  lib.rs  signal.rs  style.rs  theme.rs  tree.rs  widget.rs
phosphor-example/: Cargo.toml
phosphor-example/src/: main.rs
phosphor-ffi/: Cargo.toml
phosphor-platform/: Cargo.toml
phosphor-platform/src/: app.rs  event.rs  lib.rs  raster.rs
phosphor-render/: Cargo.toml
phosphor-render/src/: lib.rs  renderer.rs
phosphor-render/src/backends/: mod.rs
phosphor-render/src/backends/skia/: convert.rs  mod.rs
phosphor-widgets/: Cargo.toml
