[workspace]
resolver = "3"
members = ["phosphor-core", "phosphor-ffi", "phosphor", "phosphor-platform", "phosphor-render", "phosphor-widgets", "phosphor-example"]

[workspace.package]
authors = ["Liam Greenway <liam.greenway@students.coderva.org>"]
categories = ["graphics", "gui", "rendering"]
edition = "2024"
keywords = ["gui", "graphics"]
license = "MIT"
publish = true
version = "0.1.0"

[workspace.lints]

[workspace.dependencies]
parking_lot = "0.12"
slotmap = "1"
downcast-rs = "2"
taffy = "0.10"
futures-core = "0.3"

tokio = { version = "1", features = ["full"] }
winit = "0.30"

phosphor-core = { path = "phosphor-core" }
phosphor-render = { path = "phosphor-render" }
phosphor-platform = { path = "phosphor-platform" }
phosphor-widgets = { path = "phosphor-widgets" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
