[workspace]
resolver = "3"
members = ["halogen-core"]

[workspace.package]
authors = ["Liam Greenway <liam.greenway@students.coderva.org>"]
categories = ["graphics", "gui", "rendering"]
edition = "2024"
keywords = ["gui", "graphics"]
license = "MIT"
publish = true
version = "0.1.0"

[workspace.lints]

[workspace.dependencies]
phosphor-core = { path = "halogen-core" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
