[workspace]
resolver = "3"
members = ["halogen-core", "halogen-example", "halogen-render"]

[workspace.package]
authors = ["Liam Greenway <liam.greenway@students.coderva.org>"]
categories = ["graphics", "gui", "rendering"]
edition = "2024"
keywords = ["gui", "graphics"]
license = "MIT"
publish = true
version = "0.1.0"

[workspace.lints]

[workspace.dependencies]
winit = "0.30"
slotmap = "1"
rand = "0.10"
downcast-rs = "2"
taffy = "0.10"
raw-window-handle = "0.6"

halogen-core = { path = "halogen-core" }
halogen-render = { path = "halogen-render" }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
