[package]
name = "halogen-core"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
slotmap.workspace = true
rand.workspace = true
downcast-rs.workspace = true
taffy.workspace = true

[lints]
workspace = true
