[package]
name = "halogen-example"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
halogen-core.workspace = true
halogen-render.workspace = true
winit.workspace = true
raw-window-handle.workspace = true

[lints]
workspace = true
