[package]
name = "phosphor-core"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
parking_lot.workspace = true
slotmap.workspace = true
downcast-rs.workspace = true
taffy.workspace = true
futures-core.workspace = true

[lints]
workspace = true