[package]
name = "phosphor-example"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
phosphor-core.workspace = true
phosphor-render.workspace = true

[lints]
workspace = true
