[package]
name = "phosphor-platform"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
phosphor-core.workspace = true
phosphor-render = { workspace = true, features = ["skia"] }
tokio.workspace = true
winit.workspace = true
softbuffer = { version = "0.4", optional = true }
skia-safe = "0.97.0"

[features]
default = ["cpu"]
cpu = ["dep:softbuffer"]

[lints]
workspace = true
